--- a/etherpad/etc/etherpad.localdev-default.properties
+++ b/etherpad/etc/etherpad.localdev-default.properties
@@ -2,15 +2,17 @@ ajstdlibHome = ../infrastructure/framework-src/modules
 appjetHome = ./data/appjet
 devMode = true
 etherpad.adminPass = password
+etherpad.baseURL = localhost:9000
 etherpad.fakeProduction = false
 etherpad.isProduction = false
 etherpad.SQL_JDBC_DRIVER = com.mysql.jdbc.Driver
 etherpad.SQL_JDBC_URL = jdbc:mysql://localhost:3306/etherpad
-etherpad.SQL_PASSWORD = password
-etherpad.SQL_USERNAME = etherpad
+etherpad.SQL_PASSWORD = 
+etherpad.SQL_USERNAME = root
 listen = 9000
 logDir = ./data/logs
-modulePath = ./src
+modulePath = ../etherpad/src
 transportPrefix = /comet
 transportUseWildcardSubdomains = true
-useVirtualFileRoot = ./src
+useVirtualFileRoot = ../etherpad/src
+
